@@ -321,7 +321,6 @@ public class JsonReader implements BaseJsonReader {
 		JsonValue root = this.root;
 		this.root = null;
 		current = null;
-		lastChild.clear();
 
 		if (!stop) {
 			if (p < pe) {
@@ -348,7 +347,6 @@ public class JsonReader implements BaseJsonReader {
 	%% write data;
 
 	private final Array<JsonValue> elements = new Array(8);
-	private final Array<JsonValue> lastChild = new Array(8);
 	private JsonValue root, current;
 	private boolean stop;
 
@@ -366,18 +364,9 @@ public class JsonReader implements BaseJsonReader {
 		if (current == null) {
 			current = child;
 			root = child;
-		} else if (current.isArray() || current.isObject()) {
-			child.parent = current;
-			if (current.size == 0)
-				current.child = child;
-			else {
-				JsonValue last = lastChild.pop();
-				last.next = child;
-				child.prev = last;
-			}
-			lastChild.add(child);
-			current.size++;
-		} else
+		} else if (current.isArray() || current.isObject())
+			current.addChild(child);
+		else
 			root = current;
 	}
 
@@ -400,7 +389,6 @@ public class JsonReader implements BaseJsonReader {
 	/** Called when the end of an object or array is encountered in the JSON. */
 	protected void pop () {
 		root = elements.pop();
-		if (current.size > 0) lastChild.pop();
 		current = elements.size > 0 ? elements.peek() : null;
 	}
 
