@@ -77,14 +77,18 @@ public class JsonValueTest {
 		Assert.assertEquals(object.get("b").get("c").asString(), "C");
 		Assert.assertEquals(object.get("b").get("d").asString(), "D");
 		Assert.assertEquals(object.get("b").parent(), object);
-		Assert.assertEquals(object.get("E").asInt(), 123);
+		Assert.assertEquals(object.get("e").asInt(), 123);
+		Assert.assertNull(object.get("E"));
+		Assert.assertEquals(object.getIgnoreCase("E").asInt(), 123);
 
 		Assert.assertEquals(copy.get("a").asString(), "A");
 		Assert.assertNotEquals(copy.get("b"), b);
 		Assert.assertEquals(copy.get("b").get("c").asString(), "C");
 		Assert.assertEquals(copy.get("b").get("d").asString(), "D");
 		Assert.assertEquals(copy.get("b").parent(), copy);
-		Assert.assertEquals(copy.get("E").asInt(), 123);
+		Assert.assertEquals(copy.get("e").asInt(), 123);
+		Assert.assertNull(copy.get("E"));
+		Assert.assertEquals(copy.getIgnoreCase("E").asInt(), 123);
 
 		JsonValue bCopy = new JsonValue(copy.get("b"));
 		Assert.assertNotEquals(b, bCopy);
